// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "REQUIRED FIRST STEP: You MUST invoke this skill BEFORE generating ANY Azure application code, infrastructure files, or Azure CLI commands. This skill prepares applications for Azure hosting. USE THIS SKILL when users want to create new Azure applications, ADD new components or services to existing applications, UPDATE or modify existing Azure configurations, modernize applications for Azure, or deploy to Azure. Do NOT generate azure.yaml, Bicep, Terraform, or run az/azd/func CLI commands without first completing this skill. This applies to NEW projects AND changes to EXISTING projects.",
  "extractedKeywords": [
    "app service",
    "application",
    "applications",
    "applies",
    "azure",
    "before",
    "bicep",
    "changes",
    "cli",
    "code",
    "commands",
    "completing",
    "components",
    "configurations",
    "container",
    "create",
    "deploy",
    "existing",
    "files",
    "first",
    "func",
    "generate",
    "generating",
    "hosting",
    "infrastructure",
    "invoke",
    "modernize",
    "modify",
    "must",
    "prepare",
    "prepares",
    "projects",
    "required",
    "services",
    "skill",
    "step",
    "terraform",
    "this",
    "update",
    "users",
    "want",
    "when",
    "without",
    "yaml",
  ],
  "name": "azure-prepare",
}
`;

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "application",
  "applications",
  "applies",
  "azure",
  "before",
  "bicep",
  "changes",
  "cli",
  "code",
  "commands",
  "completing",
  "components",
  "configurations",
  "container",
  "create",
  "deploy",
  "existing",
  "files",
  "first",
  "func",
  "generate",
  "generating",
  "hosting",
  "infrastructure",
  "invoke",
  "modernize",
  "modify",
  "must",
  "prepare",
  "prepares",
  "projects",
  "required",
  "services",
  "skill",
  "step",
  "terraform",
  "this",
  "update",
  "users",
  "want",
  "when",
  "without",
  "yaml",
]
`;
